Dark Mode Slider Fix with Security Fixes (#264)
* Fix security issues

* Fix darkmode slider

--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -1,7 +1,7 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 55px;
+  width: 50px;
   height: 26px;
 }
 
